--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,25 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, world!'"
+       "'Hello from greeter1.py'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from my_project.greeter import Greeter\n",
+    "from my_project1.greeter1 import Greeter1\n",
     "\n",
+    "Greeter1().greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello from greeter2.py'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from my_project2.greeter2 import Greeter2\n",
     "\n",
-    "Greeter().greet()"
+    "Greeter2().greet()"
    ]
   }
  ],
